styles.css
* {
    padding: 0px;
    margin: 0px;   
    box-sizing: border-box;
    font-family: Roboto, sans-serif;
    color: rgb(27, 27, 56);
}

body {
    height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: rgb(28, 39, 68);
    padding: 15px 10px;
}

html {
    font-size: 62.5%;
}

#container {
    backdrop-filter: blur(5.5);
    background-color: rgb(255, 255, 255);
    height: 450px;
    width: 300px;
    transform: scale(1.2);
    border: none;
    border-radius: 15px;
    padding: 15px;
    display: flex;
    flex-direction: column;
    align-items: center;
    font-size: 2.5rem;
    margin-top: 50px;
}

body {
    height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    background-color: rgb(22, 31, 53);
    padding: 15px 10px;
    background-position: center;
    background-size: cover;
}

@media screen and (max-width: 295px) {
    body {
        transform: scale(0.95);
    }
}

@media screen and (max-width: 290px) {
    body {
        transform: scale(0.90);
    }
}

@media screen and (max-width: 285px) {
    body {
        transform: scale(0.85);
    }
}

html {
    font-size: 62.5%;
}

h1 {
    color: white;
    font-weight: normal;
    font-size: 4rem;
    margin-bottom: 15px;
    background-color: rgba(78, 67, 118, 0.2);
    border-radius: 10px;
    padding: 5px;
}

#container {
    backdrop-filter: blur(5.5);
    background-color: rgba(255, 255, 255, 0.82);
    height: 450px;
    width: 300px;
    transform: scale(1.2);
    border: none;
    border-radius: 15px;
    padding: 15px;
    display: flex;
    flex-direction: column;
    align-items: center;
    font-size: 2.5rem;
}

#searchContainer {
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    margin: 0px;
}

#searchField {
    background-color: rgb(255, 255, 255);
    border: 1px solid rgba(0, 0, 0, 0.60);
    border-radius: 5px;
    outline: none;
    padding: 5px;
    height: 30px;
}

#searchButton {
    transform: scale(1.05);
    background-image: linear-gradient(to right, #2b5876 0%, #4e4376  51%, #2b5876  100%);
    margin: none;
    padding: 4px;
    text-align: center;
    text-transform: uppercase;
    transition: 0.5s;
    color: white;            
    box-shadow: 0 0 20px #eee;
    box-shadow: 0px 0px 3px 2px rgba(0, 0, 0, 0.3);
    border: none;
    border-radius: 10px;  
    will-change: transform;
}

#searchButton:hover {
    background-position: right center; /* change the direction of the change here */
    color: #fff;
    text-decoration: none;
    transform: scale(1.1);
}

#mainInfo {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    margin-bottom: 20px;
    margin-top: -20px;
}

#tempratureElement {
    font-size: 4.5rem;
}

#weatherDiscription{
    font-size: 2rem;
}

#otherInfo {
    width: 90%;
    display: flex;
    justify-content: space-between;
}

.smallText {
    font-size: 1.5rem;
}

img {
    width: 200px;
    height: 100px;
    margin-top: 10px;
}

.invisible {
    display: block;
    opacity: 0%;
}

#locationIcon {
    height: 20px;
    width: 20px;
    filter: invert(21%) sepia(78%) saturate(406%) hue-rotate(196deg) brightness(50%) contrast(90%);
}

#unitSelection {
    display: flex;
    justify-content: space-around;
    width: 100%;
    padding-bottom: 30px;
}

#unitSelection label {
    transform: scale(0.8);
}

#unitSelection label input {
    transform: scale(1.2);
    margin-right: 5px;
}

#tempRange {
    font-size: 2rem;
    margin-bottom: 25px;
}

